style: fix button wih using flex-grow on mobile

--- a/assets/custom-sports-banner.css
+++ b/assets/custom-sports-banner.css
@@ -11,4 +11,7 @@ margin: 0;
   .sports-banner__buttons{
     width: 100%;
   }
+  .sports-banner__buttons .button{
+    flex: 1;
+  }
 }
